fix: update overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
 
 body {
   background-color: rgb(152, 152, 152);
+  overflow-x: hidden;
 }
 
 @font-face {
